packages/pulse-core/force-app/main/default/objects/Action_Status_Template__mdt/Action_Status_Template__mdt.object-meta.xml
<CustomObject>
    <label>Action Status Template</label>
    <pluralLabel>Action Status Templates</pluralLabel>
</CustomObject>