packages/pulse-core/force-app/main/default/objects/Action_Status_Template__mdt/fields/Statuses_JSON__c.field-meta.xml
<CustomField>
    <fullName>Statuses_JSON__c</fullName>
    <label>Statuses JSON</label>
    <description>JSON array of StatusDef entries: [{key,label,order,category,isInitial,entryConditions}].</description>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>