packages/pulse-core/force-app/main/default/objects/Action_Status_Template__mdt/fields/Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Template_Key__c</fullName>
    <label>Template Key</label>
    <description>Unique key admins reference when importing a status template into an action's state machine.</description>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>